Extract PCM samples

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /src/**/*.s
 /data/*
+/sound/direct_sound_samples/*
 
 *.gba
 *.elf
@@ -20,5 +21,3 @@ tools/*.txt
 .vscode
 
 err.log
-
-!/sound/direct_sound_samples/*.bin
